--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.1.4"
+version = "a4"
 group = "com.bobeezz.family_fun_pack" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "family_fun_pack"
+archivesBaseName = "volkerhack"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
